--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <li>
                 <button class="botao selecionado">
-                    <img src="image/tripulacao-Luffy.png" alt="tripulacao Monkey D. Luffy" />
+                    <img src="image/tripulacao-luffy.png" alt="Tripulacao Monkey D. Luffy" />
                 </button>
             </li>
 
